--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.24",
     "@types/swiper": "^6.0.0",
+    "aos": "^2.3.4",
     "eslint-plugin-react-hooks": "^4.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "swiper": "^8.0.7"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
